webroot/rsrc/css/application/base/main-menu-view.css
/* ... */
.device-desktop .phabricator-application-menu {
  float: right;
}

.device-desktop .phabricator-application-menu .phui-list-item-view,
.device-desktop .phabricator-application-menu .phui-list-item-name  {
  display: none;
}

.phabricator-application-menu .phui-list-item-href {
  display: block;
}

.phabricator-application-menu .phui-list-item-icon.phui-font-fa {
  font-size: 20px;
  height: 20px;
  width: 20px;
  color: {$hoverwhite};
  margin: 8px;
  text-align: center;
  vertical-align: middle;
}

.device .phabricator-application-menu .phui-list-item-icon.phui-font-fa {
  margin: 4px 12px 4px 0;
}

.phabricator-application-menu .phui-list-item-icon.fa-plus {
  line-height: 22px;
}

.device-desktop .phabricator-application-menu
  .core-menu-item.phui-list-item-view:hover
  .phui-list-item-icon.phui-font-fa {
    color: #fff;
  }

.device-desktop .phabricator-application-menu
  .phui-list-item-view.core-menu-item {
  display: block;
}

.device-desktop .phabricator-application-menu .phui-list-item-view {
  float: left;
  position: relative;
  min-width: 36px;
  height: 36px;
  margin-top: 4px;
}

.phabricator-main-menu-dropdown.phui-list-sidenav {
  position: absolute;
  background: #fff;
  top: 42px;
  padding: 6px 0;
  margin: 0 20px 0 0;
  box-shadow: {$dropshadow};
  border: 1px solid {$lightblueborder};
  border-radius: 3px;
}

.phabricator-main-menu-dropdown.phui-list-sidenav .phui-list-item-has-icon
  .phui-list-item-href {
    padding: 4px 40px 4px 12px;
    white-space: nowrap;
}

.phabricator-main-menu-dropdown.phui-list-sidenav .phui-list-item-type-label
  .phui-list-item-name {
    padding-left: 12px;
}

/* - User Menu -----------------------------------------------------------------

  Styles unique to the user profile menu.

*/

.phabricator-core-user-menu {
  float: right;
  display: inline-block;
  padding: 9px 24px 0 8px;
  height: 35px;
  position: relative;
}

.phabricator-core-user-mobile-menu {
  display: none;
}

.phabricator-core-user-menu span.phui-icon-view.phuihead-small {
  height: 24px;
  width: 24px;
  background-size: 24px;
  border-radius: 3px;
  display: inline-block;
  margin: 1px 0 0 0;
}

.phabricator-core-user-menu .phui-icon-view {
  color: {$hoverwhite};
  font-size: 18px;
  margin: 4px 0 0 0;
}

.phabricator-core-user-menu .caret {
  position: absolute;
  right: 17px;
  top: 13px;
  border: none;
  margin: 1px;
  color: {$hoverwhite};
}

.phabricator-core-login-button {
  float: right;
  display: inline-block;
  padding: 4px 12px;
  border-radius: 3px;
  margin: 8px 6px 4px;
  border: 1px solid {$hoverwhite};
  color: {$hoverwhite};
}

.device-desktop .phabricator-core-login-button:hover {
  border: 1px solid #fff;
  color: #fff;
}

.device-desktop .phabricator-core-user-menu:hover .caret,
.device-desktop .phabricator-core-user-menu:hover .phui-icon-view {
  color: #fff;
}

.device .phabricator-core-user-menu .caret {
  display: none;
}

.device .phabricator-core-user-mobile-menu {
  display: block;
}

.device .phabricator-core-user-menu {
  padding: 9px 8px 0 8px;
}

.device .phabricator-core-user-menu .phui-icon-view {
  font-size: 20px;
  margin: 3px 0 0 0;
}

ul.phabricator-core-user-profile-object .phui-oi-objname {
  font-size: {$biggestfontsize};
}

ul.phabricator-core-user-profile-object li.phui-oi,
ul.phabricator-core-user-profile-object .phui-oi-name,
ul.phabricator-core-user-profile-object .phui-oi-content,
ul.phabricator-core-user-profile-object .phui-oi-subhead {
  padding: 0;
  margin: 0;
  background: transparent;
}

ul.phabricator-core-user-profile-object.phui-oi-list-simple .phui-oi-image {
  height: 36px;
  width: 36px;
}

ul.phabricator-core-user-profile-object.phui-oi-list-simple
  .phui-oi-content-box {
    margin-left: 44px;
}



/* - Print ---------------------------------------------------------------------
*/

!print .phabricator-main-menu {
  display: none;
}

